# ballgames-snooker

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build.yml
docs/: PLATFORMS.md  REPORT.md
native/pygame/: snooker_pygame.py
native/sdl/: CMakeLists.txt
native/sdl/src/: main.cpp
scripts/: bootstrap-cpp-env.sh  build-sdl.sh  run-pygame.bat  run-pygame.sh  run-sdl.sh
web/: index.html
web/src/: game.js  styles.css
